# tsql

./: Cargo.toml  README.md  cliff.toml  config.example.toml
crates/tsql/: Cargo.toml
crates/tsql/src/: clipboard.rs  lib.rs  main.rs  util.rs
crates/tsql/src/ai/: mod.rs
crates/tsql/src/app/: app.rs
crates/tsql/src/config/: connections.rs  keymap.rs  mod.rs  schema.rs
crates/tsql/src/ui/: ai_query_modal.rs  confirm_prompt.rs  connection_form.rs  connection_manager.rs  editor.rs  fuzzy_picker.rs  grid.rs  help_popup.rs  highlighted_editor.rs  json_editor.rs  key_hint_popup.rs  key_sequence.rs  mod.rs  row_detail.rs  sidebar.rs  style.rs
crates/tsql/src/update/: apply.rs  checker.rs  detect.rs  provider.rs  state.rs  types.rs
