[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["vendor/tui-confirm-dialog"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fcoury/tsql"
rust-version = "1.86"

[workspace.dependencies]
# Shared dependencies
anyhow = "1"
rig = { package = "rig-core", version = "0.31.0" }
arboard = "3"
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-postgres = "0.7"
tokio-postgres-rustls-improved = "0.16"
rustls = "0.23.35"
webpki-roots = "0.26"
tui-textarea = { version = "0.7", features = ["search"] }
unicode-width = "0.2"

# Tree-sitter for syntax highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-sequel = "0.3"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"

# Theme/config parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Platform directories
dirs = "5"

# Fuzzy matching
nucleo-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
semver = "1"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
mongodb = "3"

# Secure password storage
# Must enable platform-specific features for actual keychain storage
# Without these, keyring uses a mock store that doesn't persist!
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# URL parsing
url = "2"

# Percent encoding for safe identifier serialization
percent-encoding = "2"
shlex = "1"

# Tree widget for sidebar
tui-tree-widget = "0.23"

# Spinner/throbber for loading indicators
throbber-widgets-tui = "0.9"

# Confirm dialog widget
tui_confirm_dialog_with_mouse = "0.3.1"

# Dev dependencies
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
