[package]
name = "tsql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A modern, keyboard-first PostgreSQL CLI"
keywords = ["postgresql", "postgres", "database", "cli", "tui"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "tsql"
path = "src/main.rs"

[lib]
name = "tsql"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
rig.workspace = true
arboard.workspace = true
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls-improved.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
toml.workspace = true
tui-textarea.workspace = true
unicode-width.workspace = true
nucleo-matcher.workspace = true
chrono.workspace = true
serde_json.workspace = true
semver.workspace = true
ureq.workspace = true
sha2.workspace = true
flate2.workspace = true
tar.workspace = true
futures-util.workspace = true
mongodb.workspace = true

# Secure password storage
keyring.workspace = true

# URL parsing
url.workspace = true

# Percent encoding for safe identifier serialization
percent-encoding.workspace = true
shlex.workspace = true

# Tree widget for sidebar
tui-tree-widget.workspace = true

# Spinner/throbber for loading indicators
throbber-widgets-tui.workspace = true

# Confirm dialog widget
tui_confirm_dialog_with_mouse.workspace = true

# Atomic file writes
tempfile.workspace = true

# Internal crate
tui-syntax = { path = "../tui-syntax", version = "0.5.0" }

[dev-dependencies]
dotenvy.workspace = true
uuid.workspace = true
serial_test = "3"
